--- a/authority.html
+++ b/authority.html
@@ -46,12 +46,12 @@
                                     <p>알림허용 (선택)</p>
                                 </div>
 
-                                <div class="txt-box-con-location">
+                                <!-- <div class="txt-box-con-location">
                                     <div class="icon">
                                         <img src="./assets/icons/location.png" alt="위치 아이콘">
                                     </div>
                                     <p>위치허용 (선택)</p>
-                                </div>
+                                </div> -->
 
                             </div>
                         </div>
