--- a/join.html
+++ b/join.html
@@ -89,7 +89,7 @@
                             </div>
                         </div>
 
-                        <div class="terms-con">
+                        <!-- <div class="terms-con">
                             <div class="terms-con-title">
                                 <p>위치허용 (선택)
                                     <img src="./assets/icons/drop-down.png" alt="닫기 아이콘">
@@ -111,7 +111,7 @@
                                 <input type="checkbox" name="" id="check4">
                                 <label for="check4" class="check_style1"></label>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
 
