--- a/personal-info-01.html
+++ b/personal-info-01.html
@@ -50,27 +50,12 @@
                     <!-- 로그인 정보 -->
                     <div class="login">
 
-                        <!-- 이메일 입력 -->
+                        <!-- 전화번호 입력 -->
                         <div class="login-input">
-                            <p>이메일 <span>*</span></p>
-                            <input type="textbox" name="email" value="이메일을 입력해주세요" id="email">
+                            <p>전화번호 <span>*</span></p>
+                            <input type="textbox" name="email" id="email">
 
-                            <!-- textbox 오류 날 때 -->
-                            <div class="err-textbox" style="visibility: hidden;">
-                                <input type="text">
-                                <div class="err-textbox-txt">
-                                    <img src="./assets/icons/Vector.png" alt="경고 아이콘">
-                                    <span>Error text</span>
-                                </div>
-                            </div>
-                        </div>
-
-
-                        <!-- 비밀번호 입력 -->
-                        <div class="login-input">
-                            <p>비밀번호 <span>*</span></p>
-                            <input type="textbox" name="pw" value="최소 8자리 및 영문 소문자 + 숫자 조합" id="pw">
-                            <input type="textbox" name="re-pw" value="비밀번호를 재입력해주세요" id="re-pw">
+                            <button>본인인증 하기</button>
 
                             <!-- textbox 오류 날 때 -->
                             <div class="err-textbox" style="visibility: hidden;">
