--- a/main.html
+++ b/main.html
@@ -30,11 +30,30 @@
                     <div class="login-input">
                         <p>이메일</p>
                         <input type="textbox" name="email" value="이메일을 입력해주세요" id="email">
+
+                        <!-- textbox 오류 날 때 -->
+                        <div class="err-textbox" style="visibility: hidden;">
+                            <input type="text">
+                            <div class="err-textbox-txt">
+                                <img src="./assets/icons/Vector.png" alt="경고 아이콘">
+                                <span>Error text</span>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="login-input">
                         <p>비밀번호</p>
                         <input type="textbox" name="pw" value="비밀번호를 입력해주세요" id="pw">
+
+                        <!-- textbox 오류 날 때 -->
+                        <div class="err-textbox" style="visibility: hidden;">
+                            <input type="text">
+                            <div class="err-textbox-txt">
+                                <img src="./assets/icons/Vector.png" alt="경고 아이콘">
+                                <span>Error text</span>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
 
