--- a/authority.html
+++ b/authority.html
@@ -36,23 +36,15 @@
                                     <div class="icon">
                                         <img src="./assets/icons/camera.png" alt="카메라 아이콘">
                                     </div>
-                                    <p>카메라 / 앨범 허용 <span>(필수)</span></p>
+                                    <p>카메라 / 앨범 허용</p>
                                 </div>
 
                                 <div class="txt-box-con-alert">
                                     <div class="icon">
                                         <img src="./assets/icons/bell.png" alt="알림 아이콘">
                                     </div>
-                                    <p>알림허용 (선택)</p>
+                                    <p>알림허용</p>
                                 </div>
-
-                                <!-- <div class="txt-box-con-location">
-                                    <div class="icon">
-                                        <img src="./assets/icons/location.png" alt="위치 아이콘">
-                                    </div>
-                                    <p>위치허용 (선택)</p>
-                                </div> -->
-
                             </div>
                         </div>
                     </div>
