--- a/join.html
+++ b/join.html
@@ -50,7 +50,7 @@
 
                     <div class="all-agreed">
                         <input type="checkbox" name="" id="check_all">
-                        <label for="check_all" class="check_style1">약관 전체동의</label>
+                        <label for="check_all" class="check_style1">전체동의</label>
                     </div>
 
                     <div class="terms">
@@ -127,7 +127,7 @@
             </div>
 
             <!-- 필수항목 동의 후 버튼 활성화 될 때 -->
-            <div class="btn-wrap" style="display: none;">
+            <div class="btn-wrap" style="visibility: hidden;">
                 <button type="button">동의합니다</button>
             </div>
 
