--- a/login-info.html
+++ b/login-info.html
@@ -53,7 +53,7 @@
                         <!-- 이메일 입력 -->
                         <div class="login-input">
                             <p>이메일 <span>*</span></p>
-                            <input type="textbox" name="email" value="이메일을 입력해주세요" id="email">
+                            <input type="textbox" name="email" placeholder="이메일을 입력해주세요" id="email">
 
                             <!-- textbox 오류 날 때 -->
                             <div class="err-textbox" style="visibility: hidden;">
@@ -69,8 +69,8 @@
                         <!-- 비밀번호 입력 -->
                         <div class="login-input">
                             <p>비밀번호 <span>*</span></p>
-                            <input type="textbox" name="pw" value="최소 8자리 및 영문 소문자 + 숫자 조합" id="pw">
-                            <input type="textbox" name="re-pw" value="비밀번호를 재입력해주세요" id="re-pw">
+                            <input type="textbox" name="pw" placeholder="최소 8자리 및 영문 소문자 + 숫자 조합" id="pw">
+                            <input type="textbox" name="re-pw" placeholder="비밀번호를 재입력해주세요" id="re-pw">
 
                             <!-- textbox 오류 날 때 -->
                             <div class="err-textbox" style="visibility: hidden;">
@@ -95,7 +95,7 @@
 
 
             <!-- 활성화 시 버튼 -->
-            <div class="btn-wrap" style="display: none;">
+            <div class="btn-wrap" style="visibility: hidden;">
                 <button type="button">다음</button>
             </div>
         </div>
