--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
                 <div class="login">
                     <div class="login-input">
                         <p>이메일</p>
-                        <input type="textbox" name="email" value="이메일을 입력해주세요" id="email">
+                        <input type="textbox" name="email" placeholder="이메일을 입력해주세요" id="email">
 
                         <!-- textbox 오류 날 때 -->
                         <div class="err-textbox" style="visibility: hidden;">
@@ -43,7 +43,7 @@
 
                     <div class="login-input">
                         <p>비밀번호</p>
-                        <input type="textbox" name="pw" value="비밀번호를 입력해주세요" id="pw">
+                        <input type="textbox" name="pw" placeholder="비밀번호를 입력해주세요" id="pw">
 
                         <!-- textbox 오류 날 때 -->
                         <div class="err-textbox" style="visibility: hidden;">
