--- a/personal-info-01.html
+++ b/personal-info-01.html
@@ -80,7 +80,7 @@
 
 
             <!-- 활성화 시 버튼 -->
-            <div class="btn-wrap" style="display: none;">
+            <div class="btn-wrap" style="visibility: hidden;">
                 <button type="button">다음</button>
             </div>
         </div>
