--- a/personal-info-02.html
+++ b/personal-info-02.html
@@ -75,8 +75,8 @@
                         </div>
 
                         <!-- 중복확인 버튼 클릭 시 -->
-                        <!-- display:none 해둔상태입니다. -->
-                        <div class="overlap" style="display: none;">
+                        <!-- style="visibility: hidden;" 해둔상태입니다. -->
+                        <div class="overlap" style="visibility: hidden;">
                             <div class="inner">
                                 <div class="img">
                                     <img src="/assets/icons/확인체크.png" alt="확인 체크">
@@ -91,34 +91,52 @@
                         </div>
 
 
-                        <div class="personal-infomation-input">
-                            <p>우리 동네 설정 <span>*</span></p>
-                            <input type="textbox" name="mytown" value="우리 동네를 설정해주세요" id="mytown">
+                        <div class="personal-infomation-input mytown">
+                            <div class="mytown-title">
+                                <p>우리 동네 설정 <span>*</span></p>
+                            </div>
+
+                            <div class="mytown-input">
+                                <input type="textbox" name="mytown" placeholder="우리 동네로 설정할 주소를 입력해주세요" id="mytown">
+                                <img src="/assets/icons/search.png" alt="검색 아이콘">
+                            </div>
+
                         </div>
 
                         <div class="personal-infomation-input">
                             <p>생년월일</p>
-                            <input type="textbox" name="birthday" value="생년월일을 입력해주세요" id="birthday">
+                            <input type="textbox" name="birthday" placeholder="생년월일을 입력해주세요" id="birthday">
                         </div>
 
                         <div class="personal-infomation-input gender">
                             <p>성별</p>
 
                             <div class="gender-select">
-                                <button>
-                                    <img src="./assets/icons/남성.png" alt="남성 캐릭터">
+                                <div class="male">
+                                    <input type="radio" id="male" name="male" value="male">
+                                    <label for="male" class="check_style2"></label>
                                     <p>남성</p>
-                                </button>
-                                <button>
-                                    <img src="./assets/icons/여성.png" alt="여성 캐릭터">
-                                    <p>여성</p>
-                                </button>
+                                </div>
 
-                                <!-- 성별 클릭 시 -->
-                                <button class="gender-click" style="visibility: hidden;">
-                                    <img src="./assets/icons/여성.png" alt="여성 캐릭터">
+                                <!-- 남성 클릭시 -->
+                                <div class="gender-click" style="visibility: hidden;">
+                                    <input type="radio" id="male" name="male" value="male">
+                                    <label for="male" class="check_style2"></label>
+                                    <p>남성</p>
+                                </div>
+
+                                <div class="female">
+                                    <input type="radio" id="female" name="female" value="female">
+                                    <label for="female" class="check_style3"></label>
                                     <p>여성</p>
-                                </button>
+                                </div>
+
+                                <!-- 여성 클릭시 -->
+                                <div class="gender-click" style="visibility: hidden;">
+                                    <input type="radio" id="female" name="female" value="female">
+                                    <label for="female" class="check_style3"></label>
+                                    <p>여성</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -129,8 +147,14 @@
 
 
 
+            <div class="grey-button-wrap">
+                <button type="button">다음</button>
+            </div>
 
-            <div class="btn-wrap">
+
+
+            <!-- 버튼 활성화 시 -->
+            <div class="btn-wrap" style="visibility: hidden;">
                 <button type="button">다음</button>
             </div>
         </div>
