라디오버튼 수정

--- a/personal-info-02.html
+++ b/personal-info-02.html
@@ -111,32 +111,37 @@
                         <div class="personal-infomation-input gender">
                             <p>성별</p>
 
+
                             <div class="gender-select">
                                 <div class="male">
-                                    <input type="radio" id="male" name="male" value="male">
+                                    <input type="radio" name="gender" value="male">
                                     <label for="male" class="check_style2"></label>
                                     <p>남성</p>
                                 </div>
+
 
                                 <!-- 남성 클릭시 -->
                                 <div class="gender-click" style="visibility: hidden;">
-                                    <input type="radio" id="male" name="male" value="male">
+                                    <input type="radio" name="gender" value="male">
                                     <label for="male" class="check_style2"></label>
                                     <p>남성</p>
                                 </div>
 
+
                                 <div class="female">
-                                    <input type="radio" id="female" name="female" value="female">
+                                    <input type="radio" name="gender" value="female">
                                     <label for="female" class="check_style3"></label>
                                     <p>여성</p>
                                 </div>
 
+
                                 <!-- 여성 클릭시 -->
                                 <div class="gender-click" style="visibility: hidden;">
-                                    <input type="radio" id="female" name="female" value="female">
+                                    <input type="radio" name="gender" value="female">
                                     <label for="female" class="check_style3"></label>
                                     <p>여성</p>
                                 </div>
+
                             </div>
                         </div>
                     </div>
