비밀번호 인증 이메일 템플릿 추가

--- a/search-img.html
+++ b/search-img.html
@@ -16,31 +16,258 @@
 <body class="suit">
     <div class="content">
 
-        <div class="con search-img">
-            <div class="wrap ">
+        <div class="con search">
+            <div class="wrap">
+                <div class="search-content">
 
-
-                <div class="overlap">
-                    <div class="camera-icons">
-                        <img src="./assets/icons/flash.png" alt="플래쉬 아이콘">
-                        <img src="./assets/icons/change.png" alt="전면 후면 변경 아이콘">
-                        <img src="./assets/icons/timer.png" alt="타이머 아이콘">
-                        <img src="./assets/icons/album.png" alt="앨범 아이콘">
+                    <div class="back">
+                        <img src="./assets/icons/prev.png" alt="뒤로가기">
                     </div>
 
-                    <div class="shot-button">
-                        <button></button>
+                    <div class="search-bar">
+                        <input type="text" placeholder="검색어를 입력해주세요">
+                        <img src="./assets/icons/search.png" alt="검색 아이콘">
+                    </div>
+
+                    <div class="health-search">
+
+                        <div class="health-search-title">
+                            <p>건강 고민별 검색</p>
+                        </div>
+
+                        <ul>
+                            <li>
+                                <div class="img">
+                                    <img src="./assets/icons/dataSet.png" alt="전체">
+                                </div>
+
+                                <p>전체</p>
+                            </li>
+                            <li>
+                                <div class="img">
+                                    <img src="./assets/icons/Liver.png" alt="피로/간">
+                                    <img src="./assets/icons/hot.png" alt="hot">
+                                </div>
+
+                                <p>피로/간</p>
+                            </li>
+                            <li>
+                                <div class="img">
+                                    <img src="./assets/icons/Virus.png" alt="면역">
+                                    <img src="./assets/icons/hot.png" alt="hot">
+                                </div>
+
+                                <p>면역</p>
+                            </li>
+                            <li>
+                                <div class="img">
+                                    <img src="./assets/icons/Closed Eye.png" alt="눈">
+                                    <img src="./assets/icons/hot.png" alt="hot">
+                                </div>
+
+                                <p>눈</p>
+                            </li>
+                            <li>
+                                <div class="img">
+                                    <img src="./assets/icons/Hypertension.png" alt="혈관">
+                                </div>
+
+                                <p>혈관</p>
+                            </li>
+                            <li>
+                                <div class="img">
+                                    <img src="./assets/icons/Dermatology.png" alt="피부/미용">
+                                </div>
+
+                                <p>피부/미용</p>
+                            </li>
+                            <li>
+                                <div class="img">
+                                    <img src="./assets/icons/Stomach.png" alt="위장">
+                                </div>
+
+                                <p>위장</p>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="recent-view">
+                        <div class="recent-view-title">
+                            <p>최근 본 제품</p>
+                            <p>전체 삭제</p>
+                        </div>
+
+                        <ul>
+                            <li>
+                                <div class="img">
+                                    <img src="./assets/icons/영양제2.png" alt="영양제 사진">
+                                </div>
+                                <div class="txt">
+                                    <p>(주)한풍네이처팜</p>
+                                    <p>맘편한 루테인</p>
+                                </div>
+                            </li>
+
+                            <li>
+                                <div class="img">
+                                    <img src="./assets/icons/영양제2.png" alt="영양제 사진">
+                                </div>
+                                <div class="txt">
+                                    <p>(주)한풍네이처팜</p>
+                                    <p>맘편한 루테인</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="img">
+                                    <img src="./assets/icons/영양제2.png" alt="영양제 사진">
+                                </div>
+                                <div class="txt">
+                                    <p>(주)한풍네이처팜</p>
+                                    <p>맘편한 루테인</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="img">
+                                    <img src="./assets/icons/영양제2.png" alt="영양제 사진">
+                                </div>
+                                <div class="txt">
+                                    <p>(주)한풍네이처팜</p>
+                                    <p>맘편한 루테인</p>
+                                </div>
+                            </li>
+                        </ul>
+
+
+                    </div>
+
+                    <div class="popular-word">
+                        <div class="popular-word-title">
+                            <p>인기 검색어</p>
+                            <p>10:00 기준</p>
+                        </div>
+
+                        <div class="popular-word-ranking">
+                            <div class="ranking-left">
+                                <div class="ranking-box">
+                                    <div class="ranking-box-txt">
+                                        <p>1</p>
+                                        <p>간 영양제</p>
+                                    </div>
+                                    <div class="ranking-box-icon">
+                                        <img src="./assets/icons/caretup.png" alt="상승">
+                                    </div>
+                                </div>
+                                <div class="ranking-box">
+                                    <div class="ranking-box-txt">
+                                        <p>2</p>
+                                        <p>간 영양제</p>
+                                    </div>
+                                    <div class="ranking-box-icon">
+                                        <img src="./assets/icons/caretdown.png" alt="하강">
+                                    </div>
+                                </div>
+                                <div class="ranking-box">
+                                    <div class="ranking-box-txt">
+                                        <p>3</p>
+                                        <p>간 영양제</p>
+                                    </div>
+                                    <div class="ranking-box-icon">
+                                        <img src="./assets/icons/Group 80.png" alt="변동없음">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="ranking-right">
+
+                                <div class="ranking-box">
+                                    <div class="ranking-box-txt">
+                                        <p>4</p>
+                                        <p>간 영양제</p>
+                                    </div>
+                                    <div class="ranking-box-icon">
+                                        <img src="./assets/icons/Group 80.png" alt="변동없음">
+                                    </div>
+                                </div>
+                                <div class="ranking-box">
+                                    <div class="ranking-box-txt">
+                                        <p>5</p>
+                                        <p>간 영양제</p>
+                                    </div>
+                                    <div class="ranking-box-icon">
+                                        <img src="./assets/icons/Group 80.png" alt="변동없음">
+                                    </div>
+                                </div>
+                                <div class="ranking-box">
+                                    <div class="ranking-box-txt">
+                                        <p>6</p>
+                                        <p>간 영양제</p>
+                                    </div>
+                                    <div class="ranking-box-icon">
+                                        <img src="./assets/icons/Group 80.png" alt="변동없음">
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="search-overlay"></div>
+
+                <div class="search-select">
+                    <div class="icon">
+                        <img src="./assets/icons/close.png" alt="닫기">
+                    </div>
+
+                    <div class="txt">
+                        <div class="camera">
+                            <p>직접 카메라 촬영</p>
+                            <p>제품명이 잘 나오도록 정면에서 선명하게 촬영해주세요!</p>
+                        </div>
+
+                        <div class="album">
+                            <p>사진 앨범에서 선택</p>
+                        </div>
+
+                        <div class="file">
+                            <p>파일 선택</p>
+                        </div>
                     </div>
                 </div>
 
 
+                <!-- 이미지 미 인식시 모달 -->
+                <div class="fail" style="visibility: hidden;">
+                    <div class="icon">
+                        <img src="./assets/icons/느낌표.png" alt="느낌표 아이콘">
+                    </div>
+
+                    <div class="txt-box">
+                        <div class="title">
+                            <p>앗, 제대로 인식이 되지 않아요</p>
+                        </div>
+
+                        <div class="txt">
+                            <p>제품명이 잘 나오도록</p>
+                            <p>정면에서 선명하게 촬영해주세요!</p>
+                        </div>
+
+                        <div class="button">
+                            <button>다시 촬영하기</button>
+                            <button>텍스트로 검색하기</button>
+                        </div>
+                    </div>
+                </div>
+
             </div>
+
         </div>
 
+
+
     </div>
-
-
-
 
 </body>
 
