--- a/search.html
+++ b/search.html
@@ -16,9 +16,9 @@
 <body class="suit">
     <div class="content">
 
-        <div class="con">
+        <div class="con search">
             <div class="wrap">
-                <div class="search">
+                <div class="search-content">
 
                     <div class="back">
                         <img src="./assets/icons/prev.png" alt="뒤로가기">
@@ -34,8 +34,6 @@
                         <input type="text">
                         <img src="./assets/icons/search-color.png" alt="검색 아이콘">
                     </div>
-
-
 
                     <div class="health-search">
 
@@ -220,22 +218,24 @@
 
                     </div>
 
-                </div>
+                    <div class="search-img">
+                        <div class="search-img-title">
+                            <p>간편하게 사진 촬영으로 검색해보세요!</p>
+                            <img src="./assets/icons/close-red.png" alt="닫기">
+                            <img src="./assets/icons/말풍선.png" alt="말풍선">
+                        </div>
 
-                <div class="search-img">
-                    <div class="search-img-title">
-                        <p>간편하게 사진 촬영으로 검색해보세요!</p>
-                        <img src="./assets/icons/close-red.png" alt="닫기">
-                        <img src="./assets/icons/말풍선.png" alt="말풍선">
+                        <div class="search-img-button">
+                            <button>
+                                <img src="./assets/icons/image-icon.png" alt="">
+                                <p>이미지 검색</p>
+                            </button>
+                        </div>
                     </div>
 
-                    <div class="search-img-button">
-                        <button>
-                            <img src="./assets/icons/image-icon.png" alt="">
-                            <p>이미지 검색</p>
-                        </button>
-                    </div>
                 </div>
+
+
             </div>
 
             <!-- 검색어 입력 시 하단 div -->
@@ -254,9 +254,6 @@
 
 
     </div>
-
-
-
 
 </body>
 
