비밀번호찾기 두 페이지로 분리

--- a/search-img-result.html
+++ b/search-img-result.html
@@ -15,11 +15,11 @@
 
 <body class="suit">
     <div class="content">
-        <div class="con">
+        <div class="con search-img-result">
             <div class="wrap">
 
                 <!-- 이미지 검색 결과 있을 경우 -->
-                <div class="search-img-result">
+                <div class="search-img-result-content">
 
                     <div class="search-img-result-top">
                         <img src="./assets/icons/이미지 검색 결과 이미지.png" alt="영양제 이미지">
@@ -113,7 +113,7 @@
 
 
                 <!-- 이미지 검색 결과 없을 경우 -->
-                <div class="search-img-result" style="visibility: hidden;">
+                <div class="search-img-result-content" style="visibility: hidden;">
 
                     <div class="search-img-result-top">
                         <img src="./assets/icons/이미지 검색 결과 이미지.png" alt="영양제 이미지">
