--- a/search-img.html
+++ b/search-img.html
@@ -16,7 +16,7 @@
 <body class="suit">
     <div class="content">
 
-        <div class="con search">
+        <div class="con search-img">
             <div class="wrap">
                 <div class="search-content">
 
