--- a/find-pw-02.html
+++ b/find-pw-02.html
@@ -39,51 +39,8 @@
         <div class="con">
             <div class="wrap">
 
-                <!-- 전화번호 인증번호 받기 버튼 클릭 전 기본값 -->
-                <div class="find-pw">
-
-                    <!-- 프로그레스 바 -->
-                    <div class="progress-bar">
-                        <progress id="progress" value="30" min="0" max="100"></progress>
-                        <img src="./assets/icons/깃발.png" alt="깃발">
-                    </div>
-
-
-                    <div class="find-pw-form">
-
-                        <!-- 이메일 입력 -->
-                        <div class="find-input">
-                            <p>이메일 <span>*</span></p>
-                            <input type="textbox" name="email" placeholder="이메일을 입력해주세요" id="email">
-                        </div>
-                    </div>
-                </div>
-
-
-                <!-- [다음] 버튼 클릭 후 나타나는 모달 -->
-                <!-- style="visibility: hidden;" 해둔상태입니다. -->
-                <div class="find-pw after" style="visibility: hidden;">
-
-                    <div class="overlap">
-                        <div class="inner">
-                            <div class="img">
-                                <img src="/assets/icons/확인체크.png" alt="확인 체크">
-                            </div>
-
-                            <div class="txt">
-                                <p>인증번호</p>
-                                <span>인증번호를 전송하였습니다.</span>
-                                <button>확인</button>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-
-
                 <!-- 이메일에서 [비밀번호 변경하기] 클릭 후 나타나는 화면 -->
-                <!-- visibility:hidden 해둔상태입니다. -->
-                <div class="find-pw" style="visibility: hidden;">
+                <div class="find-pw-02">
 
                     <!-- 프로그레스 바 -->
                     <div class="progress-bar">
@@ -93,8 +50,6 @@
 
 
                     <div class="find-pw-form">
-
-                        <!-- 비밀번호 입력 -->
                         <div class="find-input">
                             <p>비밀번호 <span>*</span></p>
                             <input type="textbox" name="pw" placeholder="비밀번호를 입력해주세요" id="pw">
@@ -114,8 +69,7 @@
                 </div>
 
 
-                <!-- [비밀번호 입력] 확인 버튼 클릭 후 나타나는 모달 -->
-                <!-- visibility:hidden 해둔상태입니다. -->
+                <!-- 확인 버튼 클릭 후 나타나는 모달 -->
                 <div class="find-pw after" style="visibility: hidden;">
 
                     <div class="overlap">
@@ -136,21 +90,6 @@
 
 
             </div>
-
-
-
-
-            <!-- 비활성화 시 버튼 -->
-            <div class="grey-button-wrap">
-                <button type="button">다음</button>
-            </div>
-
-            <!-- 버튼 활성화 시-->
-            <div class="btn-wrap"  style="visibility: hidden;">
-                <button type="button">다음</button>
-            </div>
-
-
         </div>
 
     </div>
