--- a/search-result.html
+++ b/search-result.html
@@ -16,9 +16,9 @@
 <body class="suit">
     <div class="content">
 
-        <div class="con">
+        <div class="con search-result">
             <div class="wrap">
-                <div class="search-result">
+                <div class="search-result-content">
 
                     <div class="back">
                         <img src="./assets/icons/prev.png" alt="뒤로가기">
